fix: spacing for search replace button

--- a/static/css/parts/SearchField.css
+++ b/static/css/parts/SearchField.css
@@ -2,6 +2,7 @@
   contain: strict;
   display: flex;
   height: 26px;
+  gap: 4px;
 }
 
 .SearchField {
